# demo_vm_minimal

./: .gitmodules  CMakeLists.txt  README.md  vm_minimal.camkes
plat/jetson-nano-2gb-dev-kit/: plat.camkes  plat.cmake
plat/jetson-tx2-nx-a206/: plat.camkes  plat.cmake
plat/odroidc2/: plat.camkes  plat.cmake
plat/qemu-arm-virt/: plat.camkes  plat.cmake
